# smart-card

./: .env  .env.production  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
public/cards/: all.json
public/cards/component/: 1.vue  2.vue  3.vue  4.vue  5.vue
public/splashscreen/: splashscreen.html
public/test/: test.vue
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/lib/asr/: Cargo.toml
src-tauri/lib/asr/src/: lib.rs
src-tauri/lib/common/: Cargo.toml
src-tauri/lib/common/src/: dir.rs  id.rs  lib.rs
src-tauri/lib/updater/: Cargo.toml
src-tauri/lib/updater/src/: app_downloader.rs  app_version.rs  downloader.rs  lib.rs  resources_downloader.rs
src-tauri/src/: lib.rs  main.rs  setup.rs
src-tauri/src/common/: mod.rs  req.rs  res.rs  utils.rs
src-tauri/src/config/: log_config.rs  mod.rs
src-tauri/src/db/: mod.rs  sqlite.rs  tools.rs
src-tauri/src/db/mapper/: workspace.html
src-tauri/src/db/migrations/: mod.rs
src-tauri/src/db/migrations/v0_1_0/: mod.rs
src-tauri/src/db/models/: workspace.rs
src-tauri/src/db/sql/: init.sql
src-tauri/src/server/workspace/: commands.rs  mod.rs  service.rs
src/components/DevUtil/: dev-remark.vue
src/layout/: index.vue
src/router/: index.js
src/store/: index.js
src/styles/: element-ui-cover.scss  highlight.scss  index.scss  md-preview.scss  right-menu.scss  vditor.scss
src/utils/: commands.ts  sfc-loader.ts  util.ts
(+32 files in other folders)
