[package]
name = "myj"
version = "0.1.0"
description = "墨音笺"
authors = ["wxg"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "myj_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
common = { path = "lib/common" }
asr = { path = "lib/asr" }
updater = { path = "lib/updater" }
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1" }
chrono = "0.4.39"
anyhow = "1.0"
rbatis = { version = "4.7", features = ["debug_mode"] }
rbs = { version = "4.7" }
rbdc-sqlite = { version = "^4.7" }
rbdc-pool-fast = "4.7"
fastdate = "0.3.36"
log = "0.4.29"
env_logger = "0.11.8"
ansi_term = "0.12.1"
derive_builder = "0.20"
strum = "0.27"
strum_macros = "0.27"
semver = "1"
fs_extra = "1.3"

[features]
cuda = ["asr/cuda"]

[workspace]
members = ["lib/asr", "lib/common", "lib/updater"]

